[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Eric Dattore <eric.dattore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "libaoc2019"

[[bin]]
path = "src/bin/day1.rs"
name = "day1"

[[bin]]
path = "src/bin/day2.rs"
name = "day2"

[[bin]]
path = "src/bin/day3.rs"
name = "day3"

[dependencies]
